--- a/styles.css
+++ b/styles.css
@@ -1,402 +1,228 @@
-@font-face {
-  font-family: 'Istok Web';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Istok Web Regular'), local('IstokWeb-Regular'), url(https://fonts.gstatic.com/s/istokweb/v15/3qTvojGmgSyUukBzKslpBmt_.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-*{
-  width: auto;
-}
-
-
+/* Apply the Istok Web font to the entire document */
 body {
-  padding:50px;
-  font:14px/1.5 "Istok Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:black;
-  font-weight:400;
+  font-family: 'Istok Web', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 20px;
-}
-
-p, ul, ol, table, pre, dl {
-  margin:0 0 5px;
-  text-align: justify;
-}
-
-h1, h2, h3 {
-  line-height:1.1;
-}
-
-h1 {
-  font-size:28px;
-}
-
-h2 {
-  color:#393939;
-}
-
-h3, h4, h5, h6 {
-  color:#494949;
-}
-
-h3 {
-  margin-bottom: .5em;
-  margin-top: 1em;
-}
-
-
-
-a {
-  color:#234AB3;
-  font-weight:400;
-  text-decoration:none;
-}
-
-a:hover {
-    color: #CD1076;
-}
-
-a small {
-  font-size:12px;
-  color:#777;
-  margin-top:-0.6em;
-  display:block;
-}
-
-.wrapper {
-  width:860px;
-  margin:0 auto;
-}
-
-blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
-}
-
-code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color:#333;
-  font-size:12px;
-}
-
-pre {
-  padding:8px 15px;
-  background: #f8f8f8;  
-  border-radius:5px;
-  border:1px solid #e5e5e5;
-  overflow-x: auto;
-}
-
-table {
-  width:100%;
-  border-collapse:collapse;
-}
-
-th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
-}
-
-dt {
-  color:#444;
-  font-weight:700;
-}
-
-th {
-  color:#444;
-}
-
-img {
-  max-width:100%;
-}
-
-header {
-  width:290px;
-  float:left;
-  position:fixed;
-}
-
-header ul {
-  list-style:none;
-  height:40px;
-  
-  padding:0;
-  
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
-}
-
-header li {
-  width:85px;
-  float:left;
-  border-right:1px solid #d2d2d2;
-  height:40px;
-}
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:40px;
-}
-
-strong {
-  color:#222;
-  font-weight:700;
-}
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
-}
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
-}
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
-}
-
-section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
-}
-
-small {
-  font-size:11px;
-}
-
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
-}
-
-footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
-}
-
-@media print, screen and (max-width: 960px) {
-  
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-  
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-  
-  header {
-    padding-right:250px;
-  }
-  
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 10px;
-  }
-  
-  header a small {
-    display:inline;
-  }
-  
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
-}
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-  
-  header {
-    padding:0;
-  }
-  
-  header ul, header p.view {
-    position:static;
-  }
-  
-  pre, code {
-    word-wrap:normal;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:10px;
-  }
-  
-  header ul {
-    display:none;
-  }
-}
-
-@media print {
-  body {
-    padding:0.2in;
-    font-size:12pt;
-    color:#444;
-  }
-}
-
-#pub{
-  position: relative;
-}
-
-article{
- padding: 6px;
-  color: black;
-}
-
-article img {
-    margin: 10px auto 20px;
-    display: block;
-}
-
-.list {
-  margin-left: 10%;
-  margin-right: 10%;
-  background-color: #e7f3fe;
-  border-left: 6px solid #2196F3;
-  padding: 6px;
-}
-
-
-
-body {
-  font-family: 'Istok Web';
-}
-
-/* Fixed sidenav, full height */
-.sidenav {
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 20px;
-  color: #818181;
-  display: block;
-  border: none;
-  background: none;
-  width: 100%;
-  text-align: left;
-  cursor: pointer;
-  outline: none;
-}
-
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
-  color: #f1f1f1;
-}
-
-/* Main content */
-.main {
-  margin-left: 200px; /* Same as the width of the sidenav */
-  font-size: 20px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
-
-/* Add an active class to the active dropdown button */
-.active {
-  background-color: green;
-  color: white;
-}
-
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-  display: none;
-  background-color: #262626;
-  padding-left: 8px;
-}
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-  float: right;
-  padding-right: 8px;
-}
-
-/* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
-/*FOR COLUMN*/
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-/* Create two unequal columns that floats next to each other */
-.column {
-  float: left;
-  padding: 10px;
-  height: 720px; /* Should be removed. Only for demonstration */
+header {
+  background-color: #333;
+  padding: 20px;
+  color: #fff;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
-.left {
-  width: 60%;
+.logo img {
+  height: 50px; /* Adjust the height as needed */
+  width: auto;
+  border-radius: 50%; /* Makes the image circular */
 }
 
-.right {
-  width: 40%;
+.nav-links {
+  list-style: none;
+  margin-left: auto; /* Pushes navigation to the right */
 }
 
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+.nav-links li {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.nav-links li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.nav-toggle {
+  display: none;
+}
+
+.nav-toggle-label {
+  display: none;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  header {
+    justify-content: space-between;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #333;
+    position: absolute;
+    top: 70px; /* Adjusted for image height */
+    left: 0;
+  }
+
+  .nav-links li {
+    margin: 15px 0;
+    text-align: center;
+  }
+
+  .nav-toggle {
+    display: block;
+  }
+
+  .nav-toggle-label {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav-toggle-label span,
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
+    display: block;
+    background: #fff;
+    height: 3px;
+    width: 25px;
+    position: relative;
+  }
+
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
+    content: '';
+    position: absolute;
+    left: 0;
+  }
+
+  .nav-toggle-label span::before {
+    top: -8px;
+  }
+
+  .nav-toggle-label span::after {
+    top: 8px;
+  }
+
+  .nav-toggle:checked ~ .nav-links {
+    display: flex;
+  }
+}
+
+/* Footer Styles */
+footer {
+  background-color: #f8f8f8;
+  padding: 20px 0;
+  text-align: center;
+}
+
+footer .whats-new {
+  color: red;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 15px;
+}
+
+footer .whats-new marquee {
+  font-size: 18px;
+}
+
+footer .social-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .social-links a {
+  margin: 10px;
+}
+
+footer .social-links img {
+  width: 40px;
+  height: 40px;
+  transition: transform 0.2s;
+}
+
+footer .social-links img:hover {
+  transform: scale(1.1);
+}
+
+@media (max-width: 600px) {
+  footer .social-links img {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.event-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.event-item {
+  margin-bottom: 10px;
+}
+
+.event-link {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
+.event-link:hover {
+  color: lightpink;
 }
 
 
-/*FOR COLUMN ENDS*/
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+  color: black;
+}
+
+.container {
+  padding: 0 20px;
+}
+
+.whats-new {
+  font-weight: bold;
+  color: red;
+  font-size: 1.5em;
+  display: block;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
+.whats-new span {
+  animation: blink 1.5s step-start infinite;
+}
+
+.updates-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.updates-list li {
+  margin-bottom: 15px;
+  font-size: 1em;
+}
+
+.updates-list li a {
+  color: black;
+  text-decoration: none;
+  padding: 5px 0;
+  display: inline-block;
+  transition: color 0.3s ease;
+}
+
+.updates-list li a:hover {
+  color: #FF69B4;
+}
+
+@keyframes blink {
+  50% { opacity: 0; }
+}
+
+
 
 
